# eagleliz

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  README.md  makefile  project.mk  pyproject.toml  requirements.txt  setup.py
.agent/workflows/: project-onboarding.md
.github/workflows/: ci.yml  publish-to-pypi.yml
TestCatalog.library/: metadata.json  mtime.json  tags.json
TestCatalog.library/backup/: backup-2026-03-01 20.24.33.184.json  backup-2026-03-01 20.25.19.770.json  backup-2026-03-01 20.25.35.083.json  backup-2026-03-01 20.26.13.829.json  backup-2026-03-01 20.26.14.579.json  backup-2026-03-01 20.27.14.605.json  backup-2026-03-01 20.27.15.359.json  backup-2026-03-01 20.27.20.463.json  backup-2026-03-01 20.28.12.949.json  backup-2026-03-01 20.29.32.783.json  backup-2026-03-01 20.30.03.601.json  backup-2026-03-24 20.43.12.844.json  backup-2026-03-24 20.43.57.528.json  backup-2026-03-24 20.44.12.978.json  backup-2026-03-24 20.44.13.725.json  backup-2026-03-24 21.17.16.096.json  backup-2026-03-24 21.17.23.235.json  backup-2026-03-24 21.17.31.697.json  backup-2026-03-24 21.18.05.320.json  backup-2026-03-24 21.20.29.709.json  backup-2026-03-24 21.20.45.134.json  backup-2026-03-24 21.20.45.888.json  backup-2026-03-24 21.20.51.122.json  backup-2026-03-24 21.22.17.553.json  backup-2026-03-24 21.22.33.128.json  backup-2026-03-24 21.22.33.885.json  backup-2026-03-24 21.22.39.145.json  backup-2026-04-12 17.51.55.731.json  backup-2026-04-12 17.52.06.221.json  backup-2026-04-12 17.52.07.184.json  backup-2026-04-12 17.52.09.703.json  backup-2026-04-12 17.52.10.452.json  backup-2026-04-12 17.52.12.526.json  backup-2026-04-12 17.52.13.525.json  backup-2026-04-12 17.55.44.407.json  backup-2026-04-12 17.55.54.038.json  backup-2026-04-12 17.56.09.416.json  backup-2026-04-12 17.56.12.060.json  backup-2026-04-12 17.56.29.832.json  backup-2026-04-12 17.57.04.807.json  (+45 more)
TestCatalog.library/images/MM84Y0HH7G52C.info/: metadata.json
docs/: organizer.md
eagleliz/: __init__.py  cli.py  eagleliz.py  exporg.py  organizer.py  project.py  send2immich.py  sidegen.py  types.py
eagleliz/api/: __init__.py  _shared.py  eagleapi.py  eagleapi_async.py  eagleapi_async_extended.py  eagleliz.py  eaglelizapi.py
eagleliz/controller/: __init__.py  media_org.py  media_reader.py  searcher.py  searcher_eagle.py  searcher_os.py
eagleliz/core/: __init__.py  reader.py
eagleliz/integration/: __init__.py  immich.py
eagleliz/local/: reader.py  searcher.py  searcher_eagle.py  searcher_os.py
eagleliz/model/: __init__.py  api.py  local.py  metadata.py  organizer.py
eagleliz/old/: eagle_imp.py
eagleliz/system/: metadata.py
eagleliz/test/: eagle_test.py
old/: cli.py
old/integration/: immich.py
old/test/: eagle_test.py
old2/eagleliz/: cli.py  exporg.py
temp/old/: cli.py  send2immich.py
test/: conftest.py  reader.py  test_api.py  test_app_library_api.py  test_async_api.py  test_async_api_extended.py  test_cli.py  test_folder_api.py  test_item_api.py  test_library_api.py  test_local_reader.py  test_media_org.py  test_organizer.py  test_searchers.py  test_sidegen.py
(+306 files in other folders)
