[project]
name = "eagleliz"
version = "0.0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Gabliz", email = "gabliz.dev@gmail.com"},
]
dependencies = [

]

[project.scripts]
eagleliz = "eagleliz.cli:eagleliz_app"

[project.optional-dependencies]
media = [
    "pylizlib>=0.5.13",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eagleliz*"]

[dependency-groups]
dev = [
    "git-cliff>=2.10.1",
    "pdoc>=15.0.4",
    "pyinstaller>=6.16.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
