[project]
name = "eagleliz"
version = "0.0.11"
description = "Eagle.cool related utility scripts."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Gabliz", email = "gabliz.dev@gmail.com"},
]
dependencies = [
    "pylizlib[media]>=0.3.70",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
eagleliz = "eagleliz.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eagleliz*"]

[dependency-groups]
dev = [
    "git-cliff>=2.10.1",
    "pdoc>=15.0.4",
    "pyinstaller>=6.16.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
